--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -4,7 +4,7 @@
     --color-background: #F0F0F7;
     --color-primary-lighter: #7198f5;
     --color-primary-light: #6b91ea;
-    --color-primary: #5B84B1;
+    --color-primary: #00b0cb;
     --color-primary-dark: #4d76d6;
     --color-primary-darker: #4268c2;
     --color-secundary: #fc766A;
