--- a/src/components/Select/styles.css
+++ b/src/components/Select/styles.css
@@ -11,7 +11,7 @@
 }
 
 .select-block select{
-    width: 100%;
+    width: 13.48333rem;
     height: 5.6rem;
     margin-top: 0.8rem;
     border-radius: 0.8rem;
