--- a/src/components/PageHeader/styles.css
+++ b/src/components/PageHeader/styles.css
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: var(--color-text-in-primary);
+    color: #F0F0F0;
     padding: 1.6rem 0;
 }
 
