--- a/src/pages/Detail/styles.css
+++ b/src/pages/Detail/styles.css
@@ -23,7 +23,7 @@
     }
 
     .header h1 {
-        color: var(--color-text-in-primary);
+        color: #F0F0F0;
         font-family: Righteous;
     }
 
