--- a/src/pages/Detail/styles.css
+++ b/src/pages/Detail/styles.css
@@ -125,7 +125,7 @@
     }
     
     .buttons-container a.study:hover {
-        background: var(--color-primary-light);
+        background: var(--color-primary);
     }
     
     .buttons-container a.give-classes:hover {
