--- a/src/pages/Detail/styles.css
+++ b/src/pages/Detail/styles.css
@@ -117,7 +117,7 @@
     }
     
     .buttons-container a.study {
-        background: var(--color-primary-lighter);
+        background: var(--color-primary);
     }
     
     .buttons-container a.give-classes {
