--- a/src/pages/Detail/styles.css
+++ b/src/pages/Detail/styles.css
@@ -116,19 +116,19 @@
         width: 4rem;
     }
     
-    .buttons-container a.study {
+    .buttons-container a.whats {
         background: var(--color-primary);
     }
     
-    .buttons-container a.give-classes {
+    .buttons-container a.phone {
         background: var(--color-secundary);
     }
     
-    .buttons-container a.study:hover {
+    .buttons-container a.whats:hover {
         background: var(--color-primary);
     }
     
-    .buttons-container a.give-classes:hover {
+    .buttons-container a.phone:hover {
         background: var(--color-secundary-dark);
     }
     
