--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -10,7 +10,7 @@
     --color-secundary: #fc766A;
     --color-secundary-dark: #f83f32;
     --color-title-in-primary: #FFFFFF;
-    --color-text-in-primary: #E5E6ff;
+    --color-text-in-primary: #F5F5ff;
     --color-text-title: #26324d;
     --color-text-complement: #9C98A6;
     --color-text-base: #616a80;
