--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -40,7 +40,7 @@
 .buttons-container a {
     width: 20rem;
     height: 9.4rem;
-    border-radius: 0.8rem;
+    border-radius: 20px;
     font: 700 2.0rem Archivo;
 
     display: flex;
