--- a/src/components/PageHeader/styles.css
+++ b/src/components/PageHeader/styles.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     background-color: var(--color-primary);
+    border-bottom-right-radius: 15%;
 }
 
 .page-header .top-bar-container {
@@ -37,8 +38,8 @@
 }
 
 .page-header .header-content strong {
-    font: 700 3.6rem Archivo;
-    line-height: 4.2rem;
+    font: 700 3.0rem Archivo;
+    line-height: 3.6rem;
     color: var(--color-title-in-primary);
 }
 
