--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -1,9 +1,15 @@
 #page-landing {
+    display: flex;
+    flex-direction: column;
+}
+
+#page-landing-content {
     width: 100vw;
-    height: 100vh;
+    height: 750px;
 
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
 
     color: var(--color-text-in-primary);
@@ -12,7 +18,6 @@
 
 .logo-container img {
     height: 10rem;
-    max-width: 100%;
 }
 
 .hero-image {
@@ -35,6 +40,7 @@
     display: flex;
     justify-content: center;
     margin: 3.2rem 0;
+    width: 90vw;
 }
 
 .buttons-container a {
@@ -80,6 +86,7 @@
 .buttons-container a img {
     margin-right: 2.4rem;
 }
+
 .total-connections {
     font-size: 1.4rem;
     display: flex;
@@ -89,6 +96,52 @@
 
 .total-connections img {
     margin-left: 0.8rem;
+}
+
+.secondary {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    background-color: #ffffff;
+    padding: 20px;
+}
+
+.secondary strong {
+    font: 400 2.0rem Righteous;
+    color: #13131a;
+    margin-bottom: 30px;
+}
+
+.secondary .teacherList {
+    display: flex;
+    flex-direction: column;
+}
+
+.secondary .teacherList .teacherItem {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+    background-color: #F0F0F0;
+    padding: 10px 5px;
+    margin-bottom: 15px;
+}
+
+.secondary .teacherList .teacherItem img {
+    width: 70px;
+    height: 70px;
+    border-radius: 25%;
+}
+
+.secondary .teacherList .teacherItem strong {
+    font: 600 2.0rem Archivo;
+    color: #13131a;
+}
+
+.secondary .teacherList .teacherItem p {
+    font: 400 1.7rem Poppins;
+    color: #34343a;
 }
 
 @media (min-width: 1100px) {
