--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -18,6 +18,7 @@
 
 .logo-container img {
     height: 10rem;
+    width: 90vw;
 }
 
 .hero-image {
@@ -34,6 +35,7 @@
     font-size: 2.4rem;
     line-height: 4.6rem;
     margin-top: 0.8rem;
+    width: 90vw;
 }
 
 .buttons-container {
