--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -146,6 +146,30 @@
     color: #34343a;
 }
 
+.perks {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2.4rem;
+}
+
+.perksList {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.perksItem {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 4rem;
+    text-align: center;
+}
+
 @media (min-width: 1100px) {
     #page-landing-content {
         max-width: 1100px;
