--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -125,8 +125,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    border-radius: 10px;
-    background-color: #F0F0F0;
+    border-radius: 40px;
+    background-color: #fcfcfc;
     padding: 10px 5px;
     margin-bottom: 15px;
 }
@@ -134,16 +134,19 @@
 .secondary .teacherList .teacherItem img {
     width: 70px;
     height: 70px;
-    border-radius: 25%;
+    border-radius: 50%;
 }
 
 .secondary .teacherList .teacherItem strong {
+    margin-top: 10px;
+    margin-left: 15px;
     font: 600 2.0rem Archivo;
     color: #13131a;
 }
 
 .secondary .teacherList .teacherItem p {
     font: 400 1.7rem Poppins;
+    margin-left: 15px;
     color: #34343a;
 }
 
