--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -174,6 +174,45 @@
     margin-bottom: 4rem;
     text-align: center;
 }
+.footer-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    background-color: #13131a;
+    padding: 4rem;
+}
+
+.footer-content .footerItem {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 2rem;
+}
+
+.footer-content .footerItem strong {
+    font: 500 1.9rem Poppins;
+    color: #f0f0f0;
+    margin-bottom: 5px;
+}
+
+.footer-content .footerItem a {
+    font: 400 1.7rem Poppins;
+    color: #c6c6c6;
+}
+
+.footer-content .footerItem .footerGroup{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.logoFooter {
+    font: 600 3.7rem Righteous;
+    color: #F0F0F0;
+    margin-bottom: 10px;
+}
 
 @media (min-width: 1100px) {
     #page-landing-content {
