--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -171,6 +171,11 @@
     margin-top: 2.6rem;
 }
 
+.perks strong {
+    font: 400 2.0rem Righteous;
+    color: #13131a;
+}
+
 .perksList {
     display: flex;
     flex-direction: column;
@@ -200,6 +205,7 @@
     flex-direction: column;
     justify-content: center;
     margin-bottom: 2rem;
+    margin-top: 30px
 }
 
 .footer-content .footerItem strong {
