--- a/src/pages/Detail/styles.css
+++ b/src/pages/Detail/styles.css
@@ -6,7 +6,7 @@
     .teacher-container {
         width: 100vw;
         height: 100vh;
-        padding: 5px 20px 0 20px;
+        padding: 0px 20px;
         margin: 0px auto 20px auto;
         background-color: #EFF0F2;
     }
