--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -106,7 +106,7 @@
     flex-direction: column;
     width: 100vw;
     background-color: #ffffff;
-    padding: 20px;
+    padding: 2.4rem 20px;
 }
 
 .secondary strong {
@@ -172,12 +172,12 @@
     justify-content: center;
     align-items: center;
     padding: 2.4rem;
-    margin-top: 2.6rem;
 }
 
 .perks strong {
     font: 400 2.5rem Righteous;
     color: #13131a;
+    margin-top: 1.6rem;
 }
 
 .perksList {
@@ -195,45 +195,6 @@
     margin-bottom: 4rem;
     text-align: center;
     margin-top: 30px
-}
-
-.become {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 2.4rem;
-    background-color: #FFF
-}
-
-.become strong {
-    font: 400 2.5rem Righteous;
-    color: #13131a;
-}
-
-.becomeList {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.becomeItem {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 4rem;
-    margin-top: 30px;
-    text-align: center;
-}
-
-.becomeItem h2 {
-    color: #13131a
-}
-
-.becomeItem p {
-    color: #34343a
 }
 
 .footer-content {
@@ -276,51 +237,52 @@
     margin-bottom: 10px;
 }
 
-@media (min-width: 1100px) {
-    #page-landing-content {
-        max-width: 1100px;
-
-        display: grid;
-        grid-template-rows: 350px 1fr;
-        grid-template-columns: 2fr 1fr 1fr;
-        grid-template-areas: 
-        "logo hero hero"
-        "buttons buttons total"
-        ;
-    }
-
-    .logo-container {
-        grid-area: logo;
-        align-self: center;
-        text-align: left;
-        margin: 0;
+@media (min-width: 800px) {
+    #page-landing {
+        display: flex;
+        flex-direction: column;
+        max-width: 100%;
     }
     
-    .logo-container h2 {
-        text-align: initial;
-        font-size: 3.6rem;
+    #page-landing-content {
+        width: 100vw;
+        height: 700px;
+    
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    
+        color: var(--color-text-in-primary);
+        background: var(--color-primary);
     }
     
     .logo-container img {
-        height: 100%;
+        height: 10rem;
+        width: 90vw;
     }
     
     .hero-image {
-        grid-area: hero;
-        justify-self: end;
+        width: 90%;
+    }
+    
+    .logo-container {
+        text-align: center;
+        margin-bottom: 3.2rem;
+    }
+    
+    .logo-container h2 {
+        font-weight: 500;
+        font-size: 2.4rem;
+        line-height: 4.6rem;
+        margin-top: 0.8rem;
+        width: 90vw;
     }
     
     .buttons-container {
-        grid-area: buttons;
-        justify-content: flex-start;
-    }
-    
-    .buttons-container a {
-        font-size: 2.4rem;
-    }
-    
-    .total-connections {
-        grid-area: total;
-        justify-self: end;
+        display: flex;
+        justify-content: center;
+        margin: 3.2rem 0;
+        width: 90vw;
     }
 }
